--- a/src/components/Home/Content/AccomodationCard/AccomodationCard.module.scss
+++ b/src/components/Home/Content/AccomodationCard/AccomodationCard.module.scss
@@ -1,7 +1,6 @@
 @import '../../../../assets/styles/index.module.scss';
 
 .root {
-  background-color: $primary;
   border-radius: $border-radius--medium;
   font-size: $small;
   min-height: 255px;
